@@ -5,14 +5,12 @@ import com.cobblemon.mdks.cobblepass.season.*;
 import com.cobblemon.mdks.cobblepass.util.Constants;
 import com.cobblemon.mdks.cobblepass.util.LangManager;
 import com.cobblemon.mdks.cobblepass.util.Subcommand;
-import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.tree.LiteralCommandNode;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.Commands;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerPlayer;
-
 import ca.landonjw.gooeylibs2.api.UIManager;
 import ca.landonjw.gooeylibs2.api.button.Button;
 import ca.landonjw.gooeylibs2.api.button.GooeyButton;
@@ -25,17 +23,11 @@ import net.minecraft.world.item.Items;
 import net.minecraft.world.item.component.ItemLore;
 
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 
 public class SeasonCommand extends Subcommand {
-    
-    // Track pending confirmations and their options
-    private static final Map<UUID, SeasonResetOptions> pendingConfirmations = new ConcurrentHashMap<>();
-    private static final Map<UUID, Long> confirmationTimeouts = new ConcurrentHashMap<>();
-    private static final long CONFIRMATION_TIMEOUT_MS = 30000; // 30 seconds
-    
-    // Track active progress displays
+
     private static final Map<UUID, CompletableFuture<?>> activeOperations = new ConcurrentHashMap<>();
 
     public SeasonCommand() {
@@ -45,16 +37,15 @@ public class SeasonCommand extends Subcommand {
     @Override
     public LiteralCommandNode<CommandSourceStack> build() {
         return Commands.literal("season")
-                .requires(source -> source.hasPermission(4)) // Requires operator permission level
+                .requires(source -> source.hasPermission(4))
                 .then(Commands.literal("start")
                         .executes(this::startSeason))
                 .then(Commands.literal("stop")
-                        .executes(this::stopSeason))
+                        .executes(this::confirmStopSeason)
+                        .then(Commands.literal("confirm")
+                                .executes(this::stopSeason)))
                 .then(Commands.literal("endseason")
                         .executes(this::showEndSeasonConfirmation))
-                .then(Commands.literal("confirm")
-                        .then(Commands.argument("confirmation", StringArgumentType.word())
-                                .executes(this::handleConfirmation)))
                 .build();
     }
 
@@ -70,6 +61,14 @@ public class SeasonCommand extends Subcommand {
         return 1;
     }
 
+    private int confirmStopSeason(CommandContext<CommandSourceStack> context) {
+        context.getSource().sendSuccess(() -> Component.literal("§eAre you sure you want to stop the season?"), false);
+        context.getSource().sendSuccess(() -> Component.literal("§7This pauses the Battle Pass but §cDOES NOT§7 reset player data."), false);
+        context.getSource().sendSuccess(() -> Component.literal("§7To properly reset for a new season, use §b/bp season endseason§7."), false);
+        context.getSource().sendSuccess(() -> Component.literal("§7To proceed, run §b/bp season stop confirm§7."), false);
+        return 1;
+    }
+
     private int stopSeason(CommandContext<CommandSourceStack> context) {
         if (!CobblePass.config.isSeasonActive()) {
             context.getSource().sendFailure(LangManager.get(Constants.MSG_NO_ACTIVE_SEASON));
@@ -77,94 +76,65 @@ public class SeasonCommand extends Subcommand {
         }
 
         CobblePass.config.stopSeason();
-        context.getSource().sendSuccess(() -> Component.literal("§aSuccessfully stopped the battle pass season."), false);
+        context.getSource().sendSuccess(() -> Component.literal("§aSuccessfully stopped the battle pass season. Player data has not been reset."), false);
 
         return 1;
     }
-    
+
     private int showEndSeasonConfirmation(CommandContext<CommandSourceStack> context) {
         if (!context.getSource().isPlayer()) {
             context.getSource().sendFailure(LangManager.get("lang.command.must_be_player"));
             return 0;
         }
-        
+
         ServerPlayer player = context.getSource().getPlayer();
-        
-        // Check if season is active
+
         if (!CobblePass.config.isSeasonActive()) {
             context.getSource().sendFailure(LangManager.get("lang.season.reset.error.no_active_season"));
             return 0;
         }
-        
-        // Check if another operation is in progress
+
         SeasonManager seasonManager = SeasonManager.getInstance();
         if (seasonManager.isTransitionInProgress()) {
             context.getSource().sendFailure(LangManager.get("lang.season.reset.error.already_in_progress"));
             return 0;
         }
-        
-        // Show confirmation GUI
-        showSeasonEndConfirmationGUI(player);
+
+        showSeasonEndConfirmationGUI(player, new SeasonResetOptions());
         return 1;
     }
-    
-    private void showSeasonEndConfirmationGUI(ServerPlayer player) {
-        // Create default reset options
-        SeasonResetOptions defaultOptions = new SeasonResetOptions();
-        
-        ChestTemplate template = ChestTemplate.builder(6)
-                // Title and warning
+
+    private void showSeasonEndConfirmationGUI(ServerPlayer player, SeasonResetOptions options) {
+        ChestTemplate.Builder templateBuilder = ChestTemplate.builder(6)
                 .set(1, 4, createInfoButton(
                         Items.BARRIER,
                         LangManager.get("lang.season.reset.confirm.title"),
                         Arrays.asList(
                                 LangManager.get("lang.season.reset.confirm.message"),
                                 Component.literal(""),
-                                LangManager.get("lang.season.reset.confirm.warning"),
-                                Component.literal(""),
-                                LangManager.get("lang.season.reset.confirm.impact",
-                                        Map.of("playerCount", getPlayerCount(), "totalProgress", "all"))
+                                LangManager.get("lang.season.reset.confirm.warning")
                         )
                 ))
-                
-                // Premium preservation mode selection
-                .set(2, 2, createPreservationModeButton(defaultOptions, PremiumPreservationMode.PRESERVE_ALL))
-                .set(2, 3, createPreservationModeButton(defaultOptions, PremiumPreservationMode.SYNC_PERMISSIONS))
-                .set(2, 4, createPreservationModeButton(defaultOptions, PremiumPreservationMode.PRESERVE_AND_SYNC))
-                .set(2, 5, createPreservationModeButton(defaultOptions, PremiumPreservationMode.NONE))
-                
-                // Options toggles
-                .set(3, 2, createToggleButton("Broadcast Messages", defaultOptions.isBroadcastMessages(), 
-                        (options, value) -> options.setBroadcastMessages(value)))
-                .set(3, 3, createToggleButton("Create Backup", defaultOptions.isCreateBackup(), 
-                        (options, value) -> options.setCreateBackup(value)))
-                .set(3, 4, createToggleButton("Validate Before Reset", defaultOptions.isValidateBeforeReset(), 
-                        (options, value) -> options.setValidateBeforeReset(value)))
-                
-                // Action buttons
-                .set(4, 2, createConfirmButton(player, defaultOptions))
-                .set(4, 6, createCancelButton(player))
-                
-                // Information
-                .set(5, 4, createInfoButton(
-                        Items.BOOK,
-                        Component.literal("§7Information"),
-                        Arrays.asList(
-                                LangManager.get("lang.season.reset.confirm.backup"),
-                                LangManager.get("lang.season.reset.confirm.proceed"),
-                                LangManager.get("lang.season.reset.confirm.cancel")
-                        )
-                ))
-                .build();
-        
+                .set(2, 2, createPreservationModeButton(player, options, PremiumPreservationMode.PRESERVE_ALL))
+                .set(2, 3, createPreservationModeButton(player, options, PremiumPreservationMode.SYNC_PERMISSIONS))
+                .set(2, 4, createPreservationModeButton(player, options, PremiumPreservationMode.PRESERVE_AND_SYNC))
+                .set(2, 6, createPreservationModeButton(player, options, PremiumPreservationMode.NONE))
+
+                .set(3, 2, createToggleButton(player, options, "Broadcast Messages", options.isBroadcastMessages(), (opts, val) -> opts.setBroadcastMessages(val)))
+                .set(3, 4, createToggleButton(player, options, "Create Backup", options.isCreateBackup(), (opts, val) -> opts.setCreateBackup(val)))
+                .set(3, 6, createToggleButton(player, options, "Validate Before Reset", options.isValidateBeforeReset(), (opts, val) -> opts.setValidateBeforeReset(val)))
+
+                .set(4, 2, createConfirmButton(player, options))
+                .set(4, 6, createCancelButton(player));
+
         GooeyPage page = GooeyPage.builder()
-                .template(template)
-                .title("§cConfirm Season Reset")
+                .template(templateBuilder.build())
+                .title("§4Confirm Season Reset")
                 .build();
-        
+
         UIManager.openUIForcefully(player, page);
     }
-    
+
     private Button createInfoButton(net.minecraft.world.item.Item item, Component name, List<Component> lore) {
         return GooeyButton.builder()
                 .display(new ItemStack(item))
@@ -173,44 +143,39 @@ public class SeasonCommand extends Subcommand {
                 .with(DataComponents.HIDE_ADDITIONAL_TOOLTIP, Unit.INSTANCE)
                 .build();
     }
-    
-    private Button createPreservationModeButton(SeasonResetOptions options, PremiumPreservationMode mode) {
+
+    private Button createPreservationModeButton(ServerPlayer player, SeasonResetOptions options, PremiumPreservationMode mode) {
         ItemStack display;
         String name;
         List<String> lore = new ArrayList<>();
-        
+
         switch (mode) {
             case PRESERVE_ALL:
-                display = new ItemStack(Items.DIAMOND);
+                display = new ItemStack(Items.DIAMOND_BLOCK);
                 name = "§aPreserve All Premium";
-                lore.add("§7Keep premium status for all");
-                lore.add("§7current premium players");
+                lore.add("§7Keeps premium for current holders.");
                 break;
             case SYNC_PERMISSIONS:
-                display = new ItemStack(Items.REDSTONE);
+                display = new ItemStack(Items.REDSTONE_BLOCK);
                 name = "§eSync from Permissions";
-                lore.add("§7Grant premium based on");
-                lore.add("§7permission nodes only");
+                lore.add("§7Grants premium based on perms only.");
                 break;
             case PRESERVE_AND_SYNC:
-                display = new ItemStack(Items.EMERALD);
+                display = new ItemStack(Items.EMERALD_BLOCK);
                 name = "§bPreserve + Sync";
-                lore.add("§7Keep existing premium AND");
-                lore.add("§7sync from permissions");
+                lore.add("§7Keeps current holders AND syncs perms.");
                 break;
             case NONE:
-                display = new ItemStack(Items.COAL);
+                display = new ItemStack(Items.COAL_BLOCK);
                 name = "§cNo Preservation";
-                lore.add("§7All players lose premium");
-                lore.add("§7status on reset");
+                lore.add("§7Removes premium from all players.");
                 break;
             default:
                 display = new ItemStack(Items.BARRIER);
                 name = "§cUnknown Mode";
                 break;
         }
-        
-        // Add selection indicator
+
         if (options.getPreservationMode() == mode) {
             lore.add("");
             lore.add("§a✓ Selected");
@@ -218,12 +183,14 @@ public class SeasonCommand extends Subcommand {
             lore.add("");
             lore.add("§7Click to select");
         }
-        
+
+        // --- FIX IS HERE ---
         List<Component> loreComponents = new ArrayList<>();
         for (String line : lore) {
             loreComponents.add(Component.literal(line));
         }
-        
+        // --- END FIX ---
+
         return GooeyButton.builder()
                 .display(display)
                 .with(DataComponents.CUSTOM_NAME, Component.literal(name))
@@ -231,44 +198,49 @@ public class SeasonCommand extends Subcommand {
                 .with(DataComponents.HIDE_ADDITIONAL_TOOLTIP, Unit.INSTANCE)
                 .onClick(action -> {
                     options.setPreservationMode(mode);
-                    // Refresh the GUI
-                    showSeasonEndConfirmationGUI((ServerPlayer) action.getPlayer());
+                    showSeasonEndConfirmationGUI(player, options);
                 })
                 .build();
     }
-    
-    private Button createToggleButton(String optionName, boolean currentValue, ToggleAction action) {
+
+    @FunctionalInterface
+    private interface ToggleAction {
+        void apply(SeasonResetOptions options, boolean value);
+    }
+
+    private Button createToggleButton(ServerPlayer player, SeasonResetOptions options, String optionName, boolean currentValue, ToggleAction action) {
         ItemStack display = currentValue ? new ItemStack(Items.LIME_DYE) : new ItemStack(Items.GRAY_DYE);
         String name = (currentValue ? "§a✓ " : "§c✗ ") + optionName;
         List<String> lore = Arrays.asList(
-                currentValue ? "§7Currently enabled" : "§7Currently disabled",
+                currentValue ? "§7Currently §aenabled" : "§7Currently §cdisabled",
                 "§7Click to toggle"
         );
-        
+
+        // --- FIX IS HERE ---
         List<Component> loreComponents = new ArrayList<>();
         for (String line : lore) {
             loreComponents.add(Component.literal(line));
         }
-        
+        // --- END FIX ---
+
         return GooeyButton.builder()
                 .display(display)
                 .with(DataComponents.CUSTOM_NAME, Component.literal(name))
                 .with(DataComponents.LORE, new ItemLore(loreComponents))
                 .with(DataComponents.HIDE_ADDITIONAL_TOOLTIP, Unit.INSTANCE)
                 .onClick(clickAction -> {
-                    // This would need to be implemented with a more complex state management system
-                    // For now, we'll keep the current values
+                    action.apply(options, !currentValue);
+                    showSeasonEndConfirmationGUI(player, options);
                 })
                 .build();
     }
-    
+
     private Button createConfirmButton(ServerPlayer player, SeasonResetOptions options) {
         return GooeyButton.builder()
                 .display(new ItemStack(Items.GREEN_CONCRETE))
                 .with(DataComponents.CUSTOM_NAME, Component.literal("§a§lCONFIRM RESET"))
                 .with(DataComponents.LORE, new ItemLore(Arrays.asList(
-                        Component.literal("§7Click to proceed with"),
-                        Component.literal("§7the season reset operation"),
+                        Component.literal("§7Click to proceed with the reset."),
                         Component.literal(""),
                         Component.literal("§c§lWARNING: This cannot be undone!")
                 )))
@@ -279,15 +251,12 @@ public class SeasonCommand extends Subcommand {
                 })
                 .build();
     }
-    
+
     private Button createCancelButton(ServerPlayer player) {
         return GooeyButton.builder()
                 .display(new ItemStack(Items.RED_CONCRETE))
                 .with(DataComponents.CUSTOM_NAME, Component.literal("§c§lCANCEL"))
-                .with(DataComponents.LORE, new ItemLore(Arrays.asList(
-                        Component.literal("§7Click to cancel the"),
-                        Component.literal("§7season reset operation")
-                )))
+                .with(DataComponents.LORE, new ItemLore(List.of(Component.literal("§7Click to cancel the operation."))))
                 .with(DataComponents.HIDE_ADDITIONAL_TOOLTIP, Unit.INSTANCE)
                 .onClick(action -> {
                     player.closeContainer();
@@ -295,41 +264,30 @@ public class SeasonCommand extends Subcommand {
                 })
                 .build();
     }
-    
+
     private void executeSeasonReset(ServerPlayer player, SeasonResetOptions options) {
         UUID playerId = player.getUUID();
-        
-        // Check if player already has an active operation
         if (activeOperations.containsKey(playerId)) {
             player.sendSystemMessage(LangManager.get("lang.season.reset.error.already_in_progress"));
             return;
         }
-        
-        // Start the reset operation
+
         SeasonManager seasonManager = SeasonManager.getInstance();
-        
-        // Send initial progress message
         player.sendSystemMessage(LangManager.get("lang.season.reset.progress.starting"));
-        
+
         CompletableFuture<SeasonResetResult> resetFuture = seasonManager.endSeason(options);
         activeOperations.put(playerId, resetFuture);
-        
-        // Start progress tracking
-        startProgressTracking(player, resetFuture);
-        
-        // Handle completion
+
         resetFuture.whenComplete((result, throwable) -> {
             activeOperations.remove(playerId);
-            
             if (throwable != null) {
                 CobblePass.LOGGER.error("Season reset failed with exception", throwable);
                 player.sendSystemMessage(LangManager.get("lang.season.reset.error.operation_failed",
                         Map.of("error", throwable.getMessage())));
                 return;
             }
-            
+
             if (result.isSuccess()) {
-                // Send completion summary
                 sendResetCompletionSummary(player, result);
             } else {
                 player.sendSystemMessage(LangManager.get("lang.season.reset.error.operation_failed",
@@ -337,126 +295,24 @@ public class SeasonCommand extends Subcommand {
             }
         });
     }
-    
-    private void startProgressTracking(ServerPlayer player, CompletableFuture<SeasonResetResult> resetFuture) {
-        // This is a simplified progress tracking - in a real implementation,
-        // you'd want to have the SeasonManager provide progress updates
-        CompletableFuture.runAsync(() -> {
-            String[] operations = {
-                    "Creating backup...",
-                    "Preserving premium status...",
-                    "Clearing player progress...",
-                    "Restoring premium status...",
-                    "Finalizing reset..."
-            };
-            
-            for (int i = 0; i < operations.length && !resetFuture.isDone(); i++) {
-                int progress = (i + 1) * 20; // 20% per operation
-                
-                Map<String, Object> placeholders = new HashMap<>();
-                placeholders.put("progress", String.valueOf(progress));
-                placeholders.put("operation", operations[i]);
-                
-                player.sendSystemMessage(LangManager.get("lang.season.reset.progress.operation", placeholders));
-                
-                try {
-                    Thread.sleep(2000); // Wait 2 seconds between updates
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                    break;
-                }
-            }
-        });
-    }
-    
+
     private void sendResetCompletionSummary(ServerPlayer player, SeasonResetResult result) {
         SeasonResetSummary summary = result.getSummary();
-        
-        // Send main completion message
+
         Map<String, Object> placeholders = new HashMap<>();
         placeholders.put("playerCount", String.valueOf(summary.getTotalPlayersReset()));
         placeholders.put("premiumCount", String.valueOf(summary.getPremiumPlayersPreserved()));
-        
         player.sendSystemMessage(LangManager.get("lang.season.reset.complete.summary", placeholders));
-        
-        // Send detailed information
-        placeholders.clear();
-        placeholders.put("totalPlayers", String.valueOf(summary.getTotalPlayersReset()));
-        placeholders.put("premiumPreserved", String.valueOf(summary.getPremiumPlayersPreserved()));
-        placeholders.put("backupFiles", String.valueOf(summary.getBackupFilesCreated()));
-        
-        player.sendSystemMessage(LangManager.get("lang.season.reset.complete.details", placeholders));
-        
-        // Send operation duration
-        long durationSeconds = result.getOperationDuration() / 1000;
-        placeholders.clear();
-        placeholders.put("duration", String.valueOf(durationSeconds));
-        
-        player.sendSystemMessage(LangManager.get("lang.season.reset.complete.duration", placeholders));
-        
-        // Send new season information if available
+
         if (summary.getNewSeasonId() != null) {
             placeholders.clear();
             placeholders.put("newSeasonId", summary.getNewSeasonId());
-            
             player.sendSystemMessage(LangManager.get("lang.season.reset.complete.new_season", placeholders));
         }
-    }
-    
-    private int handleConfirmation(CommandContext<CommandSourceStack> context) {
-        if (!context.getSource().isPlayer()) {
-            context.getSource().sendFailure(LangManager.get("lang.command.must_be_player"));
-            return 0;
-        }
-        
-        ServerPlayer player = context.getSource().getPlayer();
-        UUID playerId = player.getUUID();
-        String confirmation = StringArgumentType.getString(context, "confirmation");
-        
-        // Check if player has a pending confirmation
-        if (!pendingConfirmations.containsKey(playerId)) {
-            player.sendSystemMessage(Component.literal("§cNo pending season reset confirmation."));
-            return 0;
-        }
-        
-        // Check timeout
-        Long timeoutTime = confirmationTimeouts.get(playerId);
-        if (timeoutTime != null && System.currentTimeMillis() > timeoutTime) {
-            pendingConfirmations.remove(playerId);
-            confirmationTimeouts.remove(playerId);
-            player.sendSystemMessage(Component.literal("§cConfirmation timeout expired."));
-            return 0;
-        }
-        
-        if ("CONFIRM".equalsIgnoreCase(confirmation)) {
-            SeasonResetOptions options = pendingConfirmations.remove(playerId);
-            confirmationTimeouts.remove(playerId);
-            executeSeasonReset(player, options);
-            return 1;
-        } else if ("CANCEL".equalsIgnoreCase(confirmation)) {
-            pendingConfirmations.remove(playerId);
-            confirmationTimeouts.remove(playerId);
-            player.sendSystemMessage(Component.literal("§7Season reset cancelled."));
-            return 1;
-        } else {
-            player.sendSystemMessage(Component.literal("§cInvalid confirmation. Type 'CONFIRM' or 'CANCEL'."));
-            return 0;
-        }
-    }
-    
-    private String getPlayerCount() {
-        // This would need to be implemented to count actual players with battle pass data
-        return "estimated";
-    }
-    
-    @FunctionalInterface
-    private interface ToggleAction {
-        void apply(SeasonResetOptions options, boolean value);
     }
 
     @Override
     public int run(CommandContext<CommandSourceStack> context) {
-        // This command has subcommands, so this method shouldn't be called directly.
         return 0;
     }
 }
